# porthole

./: .dockerignore  .gitignore  Dockerfile  MANIFEST  NEWS  PKG-INFO  README  README.md  porthole.desktop  pyproject.toml  setup.cfg  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  gentoo-build.yml  release.yml
gentoo/: porthole.ebuild
porthole/: __init__.py  gtkcompat.py  importer.py  mainwindow.py  plugin.py  startup.py  sterminal.py  version.py
porthole/_xml/: __init__.py  lang_filter.py  xmlmgr.py
porthole/advancedemerge/: __init__.py  advemerge.py
porthole/backends/: __init__.py  metadata.py  pkgcore_lib.py  portagelib.py  properties.py  set_config.py  utilities.py  version_sort.py
porthole/config/: __init__.py  configuration.py  preferences.py
porthole/db/: __init__.py  database.py  dbbase.py  dbreader.py  package.py  user_configs.py
porthole/dialogs/: __init__.py  about.py  command.py  configure.py  fileselector.py  simple.py
porthole/glade/: about.glade  advemerge.glade  config.glade  porthole.glade
porthole/glade3/: about.ui  advemerge.ui  config.ui  porthole.ui
porthole/loaders/: __init__.py  loaders.py
porthole/packagebook/: __init__.py  depends.py  notebook.py  summary.py
porthole/plugins/: __init__.py
porthole/plugins/etc-proposals/: __init__.py
porthole/plugins/profuse/: __init__.py
porthole/readers/: __init__.py  commonreader.py  deprecated.py  descriptions.py  process_reader.py  readers.py  search.py  sets.py  toolchain.py  upgradeables.py
porthole/terminal/: __init__.py  constants.py  fileselector.py  notebook.py  term_queue.py  terminal.py
porthole/utils/: __init__.py  debug.py  dispatcher-example.py  dispatcher.py  utils.py
porthole/views/: __init__.py  category.py  commontreeview.py  depends.py  helpers.py  menus.py  models.py  package.py  sorts.py
scripts/: porthole
tests/: test_dispatcher.py  test_imports.py  test_version.py
