[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porthole"
version = "0.7.0"
description = "GTK+ frontend to Portage"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Fredrik Arnerup"},
    {name = "Daniel G. Taylor"},
    {name = "Brian Dolbec", email = "dol-sen@users.sourceforge.net"},
    {name = "William F. Wheeler"},
]
keywords = ["gentoo", "portage", "package-manager", "gtk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
"Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://github.com/abdonmorales/porthole"
Repository = "https://github.com/abdonmorales/porthole"
Issues = "https://github.com/abdonmorales/porthole/issues"

[project.scripts]
porthole = "porthole.startup:main"

[tool.setuptools.packages.find]
include = ["porthole*"]

[tool.setuptools.package-data]
porthole = [
    "glade/*.glade",
    "pixmaps/*.png",
    "pixmaps/*.svg",
    "help/*.html",
    "help/*.css",
    "help/*.png",
    "config/*.xml",
    "i18n/*.pot",
    "i18n/*.po",
    "i18n/TRANSLATING",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E402",   # module-level import not at top (legacy code has prints before imports)
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (legacy code pattern)
    "E702",   # multiple statements on one line (semicolon)
    "E711",   # comparison to None (legacy code pattern, too many to change)
    "E712",   # comparison to True/False
    "E721",   # type comparison instead of isinstance
    "E722",   # bare except (legacy code pattern)
    "E741",   # ambiguous variable name (legacy code uses 'l', 'id', etc.)
    "F401",   # unused imports (many in __init__.py files)
    "F403",   # wildcard imports (legacy code pattern)
    "F405",   # may be undefined from wildcard import
    "F811",   # redefinition of unused name
    "F821",   # undefined name (from wildcard imports and legacy patterns)
    "F841",   # local variable assigned but never used
    "W191",   # indentation contains tabs (legacy code)
    "W291",   # trailing whitespace (legacy code)
    "W293",   # trailing whitespace in blank line (legacy code)
    "B006",   # mutable default argument
    "B007",   # loop variable not used
    "B023",   # function uses loop variable
    "B904",   # raise without from in except
    "SIM102", # collapsible if
    "SIM105", # use contextlib.suppress
    "SIM108", # ternary operator
    "SIM115", # use context manager for open
    "SIM201", # negate comparison
    "UP031",  # printf-style formatting (too many to change)
    "E101",   # mixed tabs and spaces (legacy code)
    "E731",   # lambda assignment (legacy code)
    "F507",   # percent format mismatch
    "F601",   # isinstance with tuple containing duplicate types
    "B008",   # mutable default in function argument
    "B015",   # pointless comparison
    "B018",   # useless expression
    "SIM103", # return boolean directly
    "SIM113", # use enumerate
]

[tool.ruff.lint.per-file-ignores]
"porthole/__init__.py" = ["F401"]
"porthole/utils/__init__.py" = ["F401"]
"porthole/loaders/loaders.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
